--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="{% static "global/css/style.css" %}" />
   </head>
   <body>
-    <h1>Qualquer coisa aqui</h1>
+    <main class="content">{% block content %}{% endblock content %}</main>
   </body>
 </html>
